Optimize GtfsParser by using ZipFile and filtering returned data