@@ -5,10 +5,20 @@ import fi.hsl.suomenlinna_hfp.gtfs.parser.GtfsParser;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
-import java.io.BufferedInputStream;
-import java.io.IOException;
+import java.io.*;
+import java.net.URI;
 import java.net.URL;
 import java.net.URLConnection;
+import java.net.http.HttpClient;
+import java.net.http.HttpRequest;
+import java.net.http.HttpResponse;
+import java.nio.channels.Channels;
+import java.nio.channels.ReadableByteChannel;
+import java.nio.file.Files;
+import java.nio.file.Path;
+import java.nio.file.Paths;
+import java.nio.file.StandardOpenOption;
+import java.util.Collection;
 import java.util.concurrent.Executors;
 import java.util.concurrent.ScheduledExecutorService;
 import java.util.concurrent.ScheduledFuture;
@@ -23,9 +33,13 @@ public class HttpGtfsProvider implements GtfsProvider {
 
     private volatile ScheduledFuture scheduledFuture;
 
+    private final HttpClient httpClient;
+
     private final String url;
     private final long interval;
     private final TimeUnit timeUnit;
+
+    private final Collection<String> routeIds;
 
     private final ScheduledExecutorService executorService = Executors.newSingleThreadScheduledExecutor((runnable) -> {
         Thread t = new Thread(runnable);
@@ -33,10 +47,12 @@ public class HttpGtfsProvider implements GtfsProvider {
         return t;
     });
 
-    public HttpGtfsProvider(String url, long interval, TimeUnit timeUnit) {
+    public HttpGtfsProvider(HttpClient httpClient, String url, long interval, TimeUnit timeUnit, Collection<String> routeIds) {
+        this.httpClient = httpClient;
         this.url = url;
         this.interval = interval;
         this.timeUnit = timeUnit;
+        this.routeIds = routeIds;
     }
 
     @Override
@@ -56,31 +72,30 @@ public class HttpGtfsProvider implements GtfsProvider {
         }
 
         scheduledFuture = executorService.scheduleAtFixedRate(() -> {
-            ZipInputStream inputStream = null;
+            Path gtfsFile = null;
+
             try {
                 long startTime = System.nanoTime();
                 LOG.info("Downloading GTFS feed from {}", url);
 
-                URLConnection conn = new URL(url).openConnection();
-                conn.connect();
+                gtfsFile = Files.createTempFile("gtfs", ".zip");
+                HttpResponse<Path> response = httpClient.send(HttpRequest.newBuilder().uri(URI.create(url)).GET().build(), HttpResponse.BodyHandlers.ofFile(gtfsFile));
 
-                inputStream = new ZipInputStream(new BufferedInputStream(conn.getInputStream(), 128 * 1024));
-
-                GtfsFeed gtfsFeed = GtfsParser.parseGtfs(inputStream);
+                GtfsFeed gtfsFeed = GtfsParser.parseGtfs(response.body().toFile(), routeIds);
 
                 LOG.info("GTFS feed downloaded in {}ms", (System.nanoTime() - startTime) / 1000000);
 
                 lastUpdate = System.nanoTime();
                 callback.accept(gtfsFeed);
-            } catch (IOException e) {
+            } catch (IOException | InterruptedException e) {
                 LOG.warn("Failed to download GTFS feed from {}", url, e);
                 onError.accept(e);
             } finally {
-                if (inputStream != null) {
+                if (gtfsFile != null) {
                     try {
-                        inputStream.close();
+                        Files.deleteIfExists(gtfsFile);
                     } catch (IOException e) {
-                        LOG.error("Failed to close input stream?", e);
+                        LOG.warn("Failed to delete temporary file {}", gtfsFile.getFileName().toString(), e);
                     }
                 }
             }
